--- a/etc/example-config.yaml
+++ b/etc/example-config.yaml
@@ -1,3 +1,11 @@
+project_name: "run-tasks"
+
+manager:
+  encoding: null
+  pattern_file_job_command: "{project_name}_job{job_id}_run{job_run_id}"
+  storage_period:
+    task_run_in_days: 100
+
 email:
   host: "smtp.mail.ru"
   port: 465
