Исправлена ошибка. Логирование в файл не работало, т.к. первый запущенный скрипт захватывал все файлы логов, даже если не пользовался ими

--- a/etc/example-config.yaml
+++ b/etc/example-config.yaml
@@ -47,6 +47,7 @@ logging:
       encoding: "utf-8"
       backupCount: 5
       maxBytes: 10000000
+      delay: true
 
     web-server-file:
       <<: *task-manager-file
