--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask==3.0.2
 flask-login==0.6.3
 flask-limiter==3.5.1
+concurrent-log-handler==0.9.25
 peewee==3.17.1
 psutil==5.9.8
 cron-converter==1.0.2
