--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,6 +8,9 @@ on:
   schedule:
     - cron: "0 0 * * MON"
 
+  # Allows to manually run the job at any time
+  workflow_dispatch:
+
 jobs:
   build:
 
